<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/dashboard_bottom_menu_dashboard"
        android:icon="?attr/lingifyDashboardBottomBarDashboardIcon" />
    <item
        android:id="@+id/shorts"
        android:title="@string/dashboard_bottom_menu_podcasts"
        android:icon="?attr/lingifyDashboardBottomBarPodcastIcon"/>
    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/subscriptions"
        android:title="@string/dashboard_bottom_menu_practices"
        android:icon="?attr/lingifyDashboardBottomBarPracticesIcon"/>
    <item
        android:id="@+id/library"
        android:title="@string/dashboard_bottom_menu_stats"
        android:icon="?attr/lingifyDashboardBottomBarStatsIcon"/>
</menu>