<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_welcome"
    tools:context=".UI.Screens.Welcome.WelcomeActivity">

    <FrameLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                android:src="?attr/lingifyLogo"
                android:padding="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_onboard_subtitle"
                android:fontFamily="@font/sf_pro_medium"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/body_primary" />
        </LinearLayout>

        <ImageView
            android:id="@+id/themeChangerButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|end"
            android:layout_margin="12dp"
            android:background="@drawable/button_background_theme_changer"
            android:src="?attr/lingifyThemeChangerImage"
            android:padding="8dp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerSection">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_title"
                    android:fontFamily="@font/sf_pro_bold"
                    android:textColor="@color/body_primary"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineSpacingExtra="4sp"
                    android:maxLines="2"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:breakStrategy="simple"
                    android:layout_marginBottom="8dp"/>
                <Button
                    android:id="@+id/getReadyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_button"
                    android:fontFamily="@font/sf_pro_medium"
                    android:textColor="@color/body_on_primary"
                    android:background="@drawable/button_background_get_ready"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:fontFamily="@font/sf_pro_medium"
                    android:textColor="@color/body_on_primary"
                    android:background="@drawable/button_background_get_ready"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_login_start"
                        android:fontFamily="@font/sf_pro_regular"
                        android:textColor="@color/body_primary"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:gravity="center" />
                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_login_end"
                        android:fontFamily="@font/sf_pro_regular"
                        android:textColor="@color/primary_color"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>