<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_background"
    tools:context=".UI.Screens.Home.HomeActivity">

    <LinearLayout
        android:id="@+id/headerCard"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_home_header"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/headerSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="@string/home_header_subtitle"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_regular" />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="@string/developer_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/sf_pro_bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="24dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/transparent"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/headerDecoration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/angkor_wat"
                android:scaleType="fitCenter"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:contentDescription="@string/app_name" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/background_home_footer"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:padding="12dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_home"
                    android:fontFamily="@font/sf_pro_bold"
                    android:textColor="@color/primary_color"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/learnButton"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:padding="12dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_learn"
                    android:fontFamily="@font/sf_pro_bold"
                    android:textColor="@color/body_background"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:padding="12dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_profile"
                    android:fontFamily="@font/sf_pro_bold"
                    android:textColor="@color/body_background"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>