<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/body_background"
    tools:context=".UI.Screens.Setup.LanguageLevel.DetectSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/themeChangerButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/button_background_theme_changer"
                android:src="?attr/lingifyThemeChangerImage"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detect_level_title"
                android:fontFamily="@font/sf_pro_bold"
                android:textColor="@color/body_primary"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:maxLines="2"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:breakStrategy="simple"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="?attr/lingifyDetectLevelImage"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/pickLevelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detect_level_manual_button"
                android:fontFamily="@font/sf_pro_medium"
                android:textColor="@color/body_on_primary"
                android:background="@drawable/button_background_get_ready"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_margin="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                android:gravity="center">
                <View
                    android:id="@+id/firstLine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="2dp"
                    android:background="@drawable/shape_stick"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_button"
                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/body_secondary"
                    android:textSize="18sp"
                    android:layout_gravity="end|center"
                    android:gravity="end|center"
                    android:lineSpacingExtra="4sp"
                    android:maxLines="2"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:breakStrategy="simple"/>
                <View
                    android:id="@+id/secondLine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@drawable/shape_stick"
                    android:layout_marginStart="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/startExamButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button_background_login_via">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="?attr/lingifyBookIcon"
                    android:layout_marginEnd="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detect_level_exam_button"
                    android:fontFamily="@font/sf_pro_medium"
                    android:textColor="@color/body_primary"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>